// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangeGroupComp helpers getChangeGroupsMarkup should return ChangeGroupComp markup w/ container 1`] = `
<div
  data-spec="content"
>
  <div
    className="nodeAsset"
  >
    <span
      className="nodeGroup fe-group"
    />
    Early Adopters
  </div>
  <div
    className="nodeAsset"
  >
    <span
      className="nodeGroup fe-group"
    />
    Testers
  </div>
  <div
    className="nodeAsset"
  >
    <span
      className="nodeGroup fe-group"
    />
    Subscribers
  </div>
</div>
`;

exports[`ChangeGroupComp helpers getContentMarkup should return list of elements that contains remove-all markup 1`] = `
Array [
  <div
    data-spec="remove_from_all"
  >
    Remove from all groups
  </div>,
]
`;

exports[`ChangeGroupComp helpers getContentMarkup should return list of group elements 1`] = `
Array [
  <div
    className="nodeAsset"
  >
    <span
      className="nodeGroup fe-group"
    />
    Early Adopters
  </div>,
  <div
    className="nodeAsset"
  >
    <span
      className="nodeGroup fe-group"
    />
    Testers
  </div>,
  <div
    className="nodeAsset"
  >
    <span
      className="nodeGroup fe-group"
    />
    Subscribers
  </div>,
]
`;

exports[`ChangeGroupComp helpers getRemoveAllMarkup should return remove-all markup 1`] = `
<div
  data-spec="remove_from_all"
>
  Remove from all groups
</div>
`;

exports[`ChangeGroupComp render should limit div to 3 groups, include ellipsesText 1`] = `
<div
  data-spec="content"
>
  <div
    className="nodeAsset"
    key="23ff7152-b588-43e4-90de-fda77aeaf7c0"
  >
    <span
      className="nodeGroup fe-group"
    />
    Customers
  </div>
  <div
    className="nodeAsset"
    key="2429d573-80d7-47f8-879f-f2ba442a1bfd"
  >
    <span
      className="nodeGroup fe-group"
    />
    Unsatisfied Customers
  </div>
  <div
    className="nodeAsset"
    key="cdbf9e01-aaa7-4381-8259-ee042447bcac"
  >
    <span
      className="nodeGroup fe-group"
    />
    Early Adopters
  </div>
  <div
    key="ellipses"
  >
    ...
  </div>
</div>
`;

exports[`ChangeGroupComp render should render 'remove from all' markup when passed group action of type Types.remove_contact_groups 1`] = `
<div
  data-spec="content"
>
  <div
    data-spec="remove_from_all"
    key="remove_from_all"
  >
    Remove from all groups
  </div>
</div>
`;

exports[`ChangeGroupComp render should render group name 1`] = `
<div
  data-spec="content"
>
  <div
    className="nodeAsset"
    key="cdbf9e01-aaa7-4381-8259-ee042447bcac"
  >
    <span
      className="nodeGroup fe-group"
    />
    Early Adopters
  </div>
  <div
    className="nodeAsset"
    key="afaba971-8943-4dd8-860b-3561ed4f1fe1"
  >
    <span
      className="nodeGroup fe-group"
    />
    Testers
  </div>
  <div
    className="nodeAsset"
    key="33b28bac-b588-43e4-90de-fda77aeaf7c0"
  >
    <span
      className="nodeGroup fe-group"
    />
    Subscribers
  </div>
</div>
`;
